--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,12 +1,34 @@
+:root{
+    --primary-color: #361e73;
+    --secondary-color: #b96edc ;
+    --tertiary-color: #d3a8e6;
+    --feedback-color: #e4e4e4;
+    --button-text-color: #e5e4ec;
+}
+
 *{
     padding: 0;
     margin: 0;
     font-family: Arial, Helvetica, sans-serif;
 }
 
+a {
+    text-decoration: none !important;
+    color: var(--secondary-color);
+}
+
+body{
+    display: grid;
+    grid-template-areas: 
+        'h h h h h h h h h'
+        '. . . m m m . . .'
+        '. . . . . . . . .';
+    grid-gap: 80px;
+    
+}
 button {
-    color: white;
-    background-color: #361b75;
+    color: var(--button-text-color);
+    background-color: var(--primary-color);
     border: none;
     font-size: 16px;
     border-radius: 10px;
@@ -14,15 +36,20 @@ button {
     
 }
 
+button:hover{
+    background-color: var(--secondary-color);
+}
+
 .text-centered {
     text-align: center;
 }
 
 .horizontal-row{
-    border-top: 1px solid grey;
+    border-top: 1px solid var(--feedback-color);
 }
 
 .header{
+    grid-area: h;
     display: flex;
     justify-content: space-between;
     padding: 20px 10px;
@@ -30,11 +57,12 @@ button {
 }
 
 .main{
-    margin: 10em 10em 5em 10em;
+    grid-area: m;
     display: flex;
     flex-flow: column wrap;
     justify-content: space-between;
     align-items: center;
+    padding: 10px;
 }
 
 .main-content{
@@ -43,18 +71,6 @@ button {
     flex-flow: row nowrap;
     justify-content: center;
     align-self: stretch;
-}
-
-.result-content{
-    margin-bottom: 1em;
-    display: flex;
-    justify-content: flex-start;
-    align-self: stretch;
-}
-
-.highscore-submission{
-    display: flex;
-    justify-content: space-around;
 }
 
 .answer-choices{
@@ -68,15 +84,57 @@ button {
   width: 30%;
   text-align: left;
   margin-bottom: 0.8%;
+  word-wrap: none;
 }
 
 #previous-result{
     line-height: 1.6;
-    color: grey;
+    color: var(--feedback-color);
     font-style: italic;
     font-size: 20px;
 }
 
 .flex-start{
     align-self: flex-start;
+}
+
+.result-content{
+    margin-bottom: 1em;
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: flex-start;
+    align-self: stretch;
+}
+
+.highscore-submission{
+    margin-bottom: 1em;
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: space-between;
+    align-items: center;
+    align-self: stretch;
+}
+
+input[type=text], select {
+    width: 100%;
+    padding: 5px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border-radius: 4px;
+    box-sizing: border-box;
+  }
+
+.submit-button{
+    border-radius: 5px;
+    padding: 0.3em 0.8em;
+    margin-right: 5px;
+}
+
+.high-score{
+    margin-bottom: 1em;
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: flex-start;
+    align-self: stretch;
+    background-color: var(--tertiary-color);
 }
